# elrond-dataset

./: .gitattributes  LICENSE  README.md  fluxograma.drawio  pyproject.toml
app/src/: 01-get_links.ipynb  01-webscraping.ipynb  02-filtering.ipynb  02-link-filtering.ipynb  03-question_answer_pair.ipynb  03-webscraping.ipynb  04-rag-evaluation.ipynb  04-rag.ipynb  final_results.json  main.ipynb
dataset/: checkpoint_links_list.csv  deduplicated_dataset.json  filtered_urls.json
dataset/evaluation/: questions.json
dataset/scraped_raw/: elinux_dataset.json  kernel_dataset.json  tdx_dataset.json  yocto_dataset.json
doc/: filtering.drawio  q&a.drawio  webscraping.drawio
elrondScraper/: scrapy.cfg
elrondScraper/elrondScraper/: items.py  middlewares.py  pipelines.py  settings.py
elrondScraper/elrondScraper/spiders/: dataset_spyder.py  elinux_spyder.py  kernel_spyder.py  tdx_spyder.py  yocto_spyder.py
