[tool.poetry]
name = "elrond-dataset"
version = "0.1.0"
description = ""
authors = ["Gabriel Freitas <gabriel.freitas@toradex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.32.3"
pandas = "^2.2.2"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
