[tool.poetry]
name = "elrond-dataset"
version = "0.1.0"
description = ""
authors = ["Gabriel Freitas <gabriel.freitas@toradex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.32.3"
pandas = "^2.2.2"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
groq = "^0.9.0"
openai = "^1.34.0"
scrapy = "^2.11.2"
transformers = "^4.41.2"
datatrove = "^0.2.0"
xxhash = "^3.4.1"
datasketch = "^1.6.5"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
